--- a/src/TidyWindow.App/Views/EssentialsPage.xaml
+++ b/src/TidyWindow.App/Views/EssentialsPage.xaml
@@ -1550,12 +1550,12 @@
                                 Style="{StaticResource EssentialsSecondaryButtonStyle}"
                                 Padding="12,6"
                                 MinWidth="120"/>
-                        <Button Content="Queue run"
-                                Margin="12,0,0,0"
-                                Padding="14,6"
-                                MinWidth="130"
-                                Command="{Binding QueuePendingTaskCommand}"
-                                Style="{StaticResource EssentialsAccentButtonStyle}"/>
+                        <Button Content="{Binding RunDialogPrimaryButtonLabel}"
+                            Margin="12,0,0,0"
+                            Padding="14,6"
+                            MinWidth="130"
+                            Command="{Binding ConfirmRunConfigurationCommand}"
+                            Style="{StaticResource EssentialsAccentButtonStyle}"/>
                     </StackPanel>
                 </Grid>
             </Border>
